--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,12 @@ on:
   push:
     branches:
       - main
+      - "**"
   pull_request:
   workflow_dispatch:
+
+env:
+  dafny: "4.3.0"
 
 jobs:
   verify:
@@ -14,6 +18,8 @@ jobs:
     steps:
       - name: Install Dafny
         uses: dafny-lang/setup-dafny-action@v1
+        with:
+          dafny-version: ${{ env.dafny }}
       - uses: actions/checkout@v3
       - name: Verify
-        run: dafny verify dafny/dfyconfig.yml
+        run: dafny verify dafny/dfyconfig.toml
