Adds a dafny version of the ebpf program in ebpf-setup/src/kern.c
- Instructions which do not use a src/dst register has that field as UNUSED
- The kernel verifier checks this while checking instruction validity
- Run dafny format and also update gitignore to ignore runtime config files

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+# Generated Runtime Configs
+*.runtimeconfig.json
+
 # Created files
 *.ll
 ebpf-setup/src/kill-example
